Black Key Alignment Fix

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ body {
 }
 
 .black-key:nth-child(8) {
-    left: 662px;
+    left: 729px;
 }
 
 .black-key:nth-child(9) {
